--- a/fundoo/fundooapp/templates/index.html
+++ b/fundoo/fundooapp/templates/index.html
@@ -1,16 +1,26 @@
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title>Index</title>
-{#  Main HomePage contain links for login and registration #}
-{% block content %}
-<center>
-    <h1> Welcome to Chat application Bridge For Sonata users in Jenkins using the Private Repo </h1><br><br>
-    <h2> Using Pipeline Script Gitwebhook</h2>
-    <button class="button" style="vertical-align:middle"><span><a href="{% url 'sign_in' %}">Login</a></span></button><br>
-    <h3><a href="{% url 'signup' %}">Click Here to register!</a></h3><br><br>
-    </center>
-</center>>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ChatApp Welcome</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+</head>
+<body>
+  <div class="overlay">
+    <div class="content">
+      <h1>Welcome to Chat Application</h1>
+      <div class="buttons">
+        <a href="{% url 'sign_in' %}" class="btn">
+          <img src="https://cdn-icons-png.flaticon.com/128/992/992651.png" alt="login" class="icon">
+          Login
+        </a>
+        <a href="{% url 'signup' %}" class="btn">
+          <img src="https://cdn-icons-png.flaticon.com/128/1828/1828490.png" alt="signup" class="icon">
+          Register
+        </a>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
