--- a/fundoo/fundooapp/templates/index.html
+++ b/fundoo/fundooapp/templates/index.html
@@ -8,7 +8,7 @@
 {% block content %}
 <center>
     <h1> Welcome to Chat application Bridge For Sonata users </h1><br><br>
-    <h1> Devops - CI/CD + IaC + Kubernetes </h1><br><br>
+    <h1> Devops - Cloud + IaC + CI/CD + Kubernetes </h1><br><br>
     <button class="button" style="vertical-align:middle"><span><a href="{% url 'sign_in' %}">Login</a></span></button><br>
     <h3><a href="{% url 'signup' %}">Click Here to register!</a></h3><br><br>
     </center>
