--- a/fundoo/fundooapp/templates/index.html
+++ b/fundoo/fundooapp/templates/index.html
@@ -4,27 +4,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Index</title>
+{#  Main HomePage contain links for login and registration #}
 {% block content %}
 <center>
-    <!-- Flaticon Image Above or Next to Heading -->
-    <img src="https://cdn-icons-png.flaticon.com/512/16941/16941653.png" alt="Chat Icon" style="width: 80px; vertical-align: middle; margin-right: 10px;">
-    
-    <h1 style="display: inline-block; vertical-align: middle;">Welcome to Chat application Bridge For Sonata users</h1>
-    
-    <br><br>
-    
-    <h1>DevOps - Cloud + IaC + CI/CD + Kubernetes</h1>
-    
-    <br><br>
-    
-    <button class="button" style="vertical-align:middle">
-        <span><a href="{% url 'sign_in' %}">Login</a></span>
-    </button>
-    
-    <br>
-    
-    <h3><a href="{% url 'signup' %}">Click Here to register!</a></h3>
-    
-    <br><br>
-</center>
+<img src="https://cdn-icons-png.flaticon.com/512/16941/16941653.png" alt="Chat Icon" style="width: 80px; vertical-align: middle; margin-right: 10px;">
+    <h1> Welcome to Chat application Bridge For Sonata users </h1><br><br>
+    <h1> Devops - Cloud + IaC + CI/CD + Kubernetes </h1><br><br>
+    <button class="button" style="vertical-align:middle"><span><a href="{% url 'sign_in' %}">Login</a></span></button><br>
+    <h3><a href="{% url 'signup' %}">Click Here to register!</a></h3><br><br>
+    </center>
+</center>>
 {% endblock %}
