--- a/fundoo/fundooapp/templates/index.html
+++ b/fundoo/fundooapp/templates/index.html
@@ -8,6 +8,7 @@
 {% block content %}
 <center>
     <h1> Welcome to Chat application Bridge For Sonata users </h1><br><br>
+    <img src="https://cdn-icons-png.flaticon.com/512/16941/16941653.png" alt="Chat Icon" style="width: 80px;">
     <h1> Devops - Cloud + IaC + CI/CD + Kubernetes </h1><br><br>
     <button class="button" style="vertical-align:middle"><span><a href="{% url 'sign_in' %}">Login</a></span></button><br>
     <h3><a href="{% url 'signup' %}">Click Here to register!</a></h3><br><br>
