--- a/fundoo/fundooapp/templates/index.html
+++ b/fundoo/fundooapp/templates/index.html
@@ -7,12 +7,14 @@
 {#  Main HomePage contain links for login and registration #}
 {% block content %}
 <center>
-    <h1> Welcome to Chat application Bridge For Sonata users </h1><br><br>
     <img src="https://cdn-icons-png.flaticon.com/512/16941/16941653.png" alt="Chat Icon" style="width: 80px; vertical-align: middle; margin-right: 10px;">
+    <h1> Welcome to Chat application Bridge For Sonata users </h1><br><br>
     <h1> Devops - Cloud + IaC + CI/CD + Docker + Kubernetes </h1><br><br>
     <button class="button" style="vertical-align:middle"><span><a href="{% url 'sign_in' %}">Login</a></span></button><br>
     <h3><a href="{% url 'signup' %}">Click Here to register!</a></h3><br><br>
-    <img src="https://www.flaticon.com/free-icon/conversation_3050431" alt="Chat Icon" style="width: 80px; vertical-align: middle; margin-right: 10px;">
+    <img src="https://cdn-icons-png.flaticon.com/128/1430/1430552.png" alt="Chat Icon" style="width: 80px; vertical-align: middle; margin-right: 10px;">
+
+
     </center>
 </center>>
 {% endblock %}
